@@ -1,8 +1,10 @@
 wajig (2.11~pre) UNRELEASED; urgency=low
 
   * UPGRADE: Use the new --with-new-pkgs option of 'apt-get upgrade'
+  * EDITSOURCES: Select $VISUAL or $EDITOR (in that order of preference)
+    if defined, else use 'sensible-editor'; Closes: #729585
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 24 Nov 2013 15:25:15 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Mon, 02 Dec 2013 20:48:22 +0200
 
 wajig (2.10) unstable; urgency=low
 
